# brainana

./: .dockerignore  .gitignore  .readthedocs.yaml  AUTHOR  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PKG-INFO  README.md  README.rst  README_Docker.md  README_NEXTFLOW.md  README_for_inz.rst  entrypoint.sh  main.nf  main_all.nf.bak  nextflow.config  pyproject.toml  run_brainana.sh  run_nextflow.sh  setup.cfg  test_func_registration_tuple.nf  test_skullstripping.py
FastSurferCNN/: SIZE_MANAGEMENT_ANALYSIS.md  TRAINING_VS_INFERENCE_EXPLANATION.md  __init__.py  test_conform.py  test_conform_centered.py  test_conform_compare.py  test_conform_debug.py  test_conform_mapping.py  test_fov_calc.py
FastSurferCNN/atlas/: atlas_manager.py
FastSurferCNN/config/: EPI_brainmask_axial.yaml  EPI_brainmask_coronal.yaml  EPI_brainmask_mixed.yaml  EPI_brainmask_sagittal.yaml  FastSurferVINN_ARM2_axial.yaml  FastSurferVINN_ARM2_coronal.yaml  FastSurferVINN_ARM2_sagittal.yaml  FastSurferVINN_EPI_brainmask_axial.yaml  FastSurferVINN_EPI_brainmask_coronal.yaml  FastSurferVINN_EPI_brainmask_sagittal.yaml  FastSurferVINN_T1w_ARM2_axial.yaml  FastSurferVINN_T1w_ARM2_coronal.yaml  FastSurferVINN_T1w_ARM2_sagittal.yaml  T1w_ARM2_axial.yaml  T1w_ARM2_axial_lia.yaml  T1w_ARM2_axial_ras.yaml  T1w_ARM2_coronal.yaml  T1w_ARM2_coronal_lia.yaml  T1w_ARM2_coronal_ras.yaml  T1w_ARM2_sagittal.yaml  T1w_ARM2_sagittal_ras.yaml  T1w_brainmask_mixed.yaml  defaults.py
FastSurferCNN/data_loader/: augmentation.py  conform.py  data_transforms.py  data_utils.py  dataset.py  loader.py
FastSurferCNN/inference/: MEMORY_FLOW_ANALYSIS.md  __init__.py  api.py  freesurfer_subfolder_prepare.py  inference.py  predict.py  predictor.py  predictor_utils.py  prepare_for_surfrecon.py  prepping_for_surfrecon.py  segmentation.py  skullstripping.py
FastSurferCNN/models/: interpolation_layer.py  networks.py
FastSurferCNN/postprocessing/: __init__.py  fix_roi_wm.py  postseg_utils.py  prepping_for_surfrecon.py  reduce_to_aseg.py  step1_fix_v1_wm.py  step2_reduce_to_aseg.py
FastSurferCNN/scripts/: 01_skullstrip_fastsurfercnn.py  02_freesurfer_prep.py  dialate_mask.py  improve_mask_by_morphology.py  prepare_T1w_brainmask.py  (+9 more)
FastSurferRecon/: README.md  pyproject.toml
FastSurferRecon/config/: default.yaml
FastSurferRecon/fastsurfer_recon/: cli.py  comparison_pre_vs_post.md  config.py  pipeline.py
FastSurferRecon/fastsurfer_recon/atlas/lut/ARM2/: lh.lookup.txt  lookup_bak.txt  rh.lookup.txt
FastSurferRecon/fastsurfer_recon/processing/: __init__.py  bias_correction.py  parcellation.py  spherical.py  surface_fix.py
FastSurferRecon/fastsurfer_recon/stages/: __init__.py  base.py  s01_volume_prep.py  s02_bias_correction.py  s03_mask_aseg.py  s04_talairach.py  s05_norm_t1.py  s06_cc_segmentation.py  s07_wm_filled.py  s08_tessellation.py  s09_smoothing.py  s10_inflation.py  s11_spherical_projection.py  s12_topology_fix.py  s13_white_preaparc.py  s14_parcellation.py  s15_surface_placement.py  s16_compute_morphometry.py  s16_registration.py  s17_registration.py  s17_statistics.py  s18_cortical_ribbon.py  s19_aseg_refinement.py  s19_cortical_ribbon.py  s20_aparc_mapping.py  s21_aparc_mapping.py  s21_wmparc_mapping.py
FastSurferRecon/fastsurfer_recon/utils/: __init__.py  logging.py  parallel.py  threading.py
FastSurferRecon/fastsurfer_recon/wrappers/: __init__.py  base.py  mri.py  mris.py  recon_all.py
FastSurferRecon/scripts/: fix_surf_header.py  surf_fix_topo.py.bak  surf_recon_T1wT2wCI.py  surf_recon_T1wT2wRatio.py  test_pipeline.py  test_pipeline_1stage.py  test_pipeline_stage.py  test_pipeline_step.py
FastSurferRecon/test/: test_pipeline.py
NHPskullstripNN/: config.py
doc/: README.md  command_line.rst  conf.py  faq.rst  index.rst  other_docs.rst  outputs.rst
docs/: ADDITIONAL_FILES_HANDLING.md  ANAT_PROCESSING_FLOW.md  ANAT_SYNTHESIS_FLOW.md  ANAT_SYNTHESIS_IMPLEMENTATION_PLAN.md  ANAT_SYNTHESIS_IMPROVEMENTS.md  CHANNEL_STRUCTURES.md  CORE_COMPONENTS.md  DEVELOPMENT_WORKFLOW.md  FLATTEN_FASTSURFER_SURFRECON_PLAN.md  FUNC_REGISTRATION_INPUT_ANALYSIS.md  IMPORT_IMPROVEMENT_PLAN.md  LOGGING_SYSTEM.md  PARAMETER_MANAGEMENT.md  PHASE_3_ITEM_9_SIMPLIFICATION.md  PROJECT_STRUCTURE.md  REFACTORING_PHASE_1_2_3.md  REFACTORING_PLAN_ANALYSIS.md  REFACTORING_SUMMARY.md  RENAME_PLAN.md  RESOURCE_USAGE_SUMMARY.md  STORAGE_OPTIMIZATION_SYMLINKS.md  TRANSFORM_INTERPOLATION_SUMMARY.md  build_rtd_local.sh  command_line.rst  conf.py  configuration.rst  core_components.puml  faq.rst  index.rst  installation.rst  macacaMRIprep_component_diagram.puml  macacaMRIprep_pipeline_flowcharts.md  macacaMRIprep_sequence_diagram.puml  other_docs.rst  outputs.rst  processing.rst  spaces_and_transforms.rst  usage_local.rst  usage_notes.rst
docs_temp/: ARGUMENT_REFERENCE.md  DOCUMENTATION_PLAN.md  GPU_RESOURCE_REVIEW.md  IMPORT_IMPROVEMENT_PLAN.md  LOGGING_SYSTEM.md  PARAMETER_MANAGEMENT.md  RESOURCE_CALIBRATION.md  TEMPLATE_ZOO_SUBFOLDERS_UPDATE_PLAN.md  docker_slim_plan.md  fireants_registration_plan.md  license_and_copyright.md  macacaMRIprep_component_diagram.puml  macacaMRIprep_sequence_diagram.puml  source_and_references_in_code.md
macacaMRINN/: __init__.py  config.py
macacaMRIprep/: __init__.py  environment.py  info.py
modules/: anatomical.nf  functional.nf  qc.nf
tests/: bak_test_primede.sh  fix_mc_data_and_qc.py  fix_surf_recon_stat_file.py  redo_surf_recon.py  surf_recon_t1wt2wcombined.py  test_bids_processor.py  test_brainana_docker.sh  test_brainana_docker_cpu.sh  test_brainana_docker_mike.sh  test_brainana_local.sh  test_cayo_anat.py  test_config_load.py  test_fireants.sh  test_fireants_py  test_fs_license_check.sh  test_nextflow.sh  test_pipeline.py  test_plot.py  test_primede.sh  test_primede_loopSub_local.py  test_primede_loopSub_slurm.py  test_primede_slurm.sh  test_primede_unet.sh  test_skullstripping.py  test_slice_timing.py
workflows/: anatomical_workflow.nf  channel_helpers.groovy  config_helpers.groovy  functional_channels.groovy  functional_workflow.nf  param_resolver.groovy  surfrecon_workflow.nf
(+475 files in other folders)
