[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# This file drives "uv pip install -e ." and defines the package and its dependencies.

[project]
name = "brainana"
version = "1.0.0"
description = "A Python package for preprocessing and registration of macaque neuroimaging data with BIDS dataset support"
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = "AGPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "Xingyu Liu", email = "liuxingyu987@gmail.com"},
    {name = "Yijun Zhuang"},
    {name = "Zi Yin"},
    {name = "Zonglei Zhen"},
    {name = "Michael Arcaro", email = "marcaro@sas.upenn.edu"},
]
keywords = [
    "neuroimaging",
    "mri",
    "macaque",
    "bids",
    "preprocessing",
    "registration",
    "freesurfer",
    "fastsurfer",

]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

dependencies = [
    # Core neuroimaging and scientific computing
    "nibabel>=5.3.2",
    "numpy>=2.3.0",
    "scipy>=1.15.3",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "packaging>=20.0",
    # PyTorch for fastsurfer_nn models (>=2.3 for FireANTs compatibility)
    "torch>=2.3.0",
    "torchvision>=0.15.0",
    "torchio>=0.18.0",
    # Image processing (SimpleITK >=2.3 for FireANTs compatibility; 2.2.1 not on PyPI for all platforms)
    "Pillow>=8.0.0",
    "scikit-image>=0.20.0",
    "SimpleITK>=2.3.0",
    # FireANTs for GPU-accelerated registration
    "fireants",
    # fastsurfer_nn dependencies
    "yacs>=0.1.8",
    "h5py>=3.8.0",
    # fastsurfer_surfrecon dependencies
    "pydantic>=2.0.0",
    "lapy>=1.0.0",
    "pymeshfix>=0.16.0",
    "pyvista>=0.43.0",
    "scikit-sparse>=0.4.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    # BIDS support
    "pybids>=0.15.0",
    # System utilities
    "psutil>=5.0.0",
    # Utilities
    "joblib>=1.5.1",
    "tqdm>=4.67.1",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.0",
    "surfplot>=0.2.0",
    "tensorboard>=2.15.0",
]
# Note: tomli not needed since requires-python >= 3.11 (has built-in tomllib)

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-copybutton>=0.5.0",
]

# System dependencies (not Python packages): Connectome Workbench (wb_command) for QC surface snapshots
# Install: apt install connectome-workbench (Debian/Ubuntu) or see https://humanconnectome.org/software/connectome-workbench

[project.urls]
Homepage = "https://github.com/xingyu-liu/brainana"
Documentation = "https://brainana.readthedocs.io"
Repository = "https://github.com/xingyu-liu/brainana"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nhp_mri_prep*", "fastsurfer_nn*", "fastsurfer_surfrecon*", "nhp_skullstrip_nn*"]

[tool.setuptools.package-data]
"nhp_mri_prep" = [
    "config/*.yaml",
    "config/*.html",
    "quality_control/resources/*.scene",
]
"fastsurfer_nn" = [
    "config/*.yaml",
    "atlas/**/*",
    "pretrained_model/*.pkl",
]
"fastsurfer_surfrecon" = [
    "config/*.yaml",
    "atlas/**/*",
]
"nhp_skullstrip_nn" = [
    "config/*.yaml",
    "pretrained_model/*.pth",
]
